--- a/views/pages/list.jade
+++ b/views/pages/list.jade
@@ -26,4 +26,24 @@ block content
 							td: a(target="_blank", href="../admin/update/#{item._id}") 修改
 							td
 								button.btn.btn-danger.del(type="button", data-id="#{item._id}") 删除
-	script(src="/js/admin.js")
+	script.
+		$(function () {
+			// body...
+			$('.del').click(function(e){
+				var target = $(e.target);
+				var id = target.data('id');
+				var tr = $('.item-id-'+id);
+
+				$.ajax({
+					type:'DELETE',
+					url:'/admin/list?id=' +id
+				})
+				.done(function(results){
+					if (results.success === 1) {
+						if (tr.length > 0) {
+							tr.remove();
+						};
+					};
+				})
+			})
+		})
